--- a/html/index.html
+++ b/html/index.html
@@ -134,6 +134,8 @@
             <p> <i class="fa-regular fa-copyright">@2024 All rights Reserved.</i></p>
         </footer> 
     </div>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, nisi.
+    </p>
     </div>
 </body>
 </html>
