--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
         <div class="latter">
             <form>
                 <input aria-label="email" name="email" id="email" placeholder="Enter Your Email" >
-                <input aria-label="submit" name="submit" value="Lets Start">
+                <input aria-label="submit" name="submit" value="Connect">
             </form>
         </div>
    
@@ -118,7 +118,6 @@
         <button class="in">Hire</button>
 
     </div>
-c
     <!-- contact us site -->
     <div class="contacts">
         <div class="last">
