made some changes

--- a/html/index.html
+++ b/html/index.html
@@ -54,7 +54,7 @@
     <!-- our Service section -->
 <div class="service">
     <div class="title">
-        <h2>Our Services</h2>
+        <h2>Services</h2>
     </div>
 
     <div class="box">
@@ -75,7 +75,7 @@
 
         <div class="card">
             <i class="fa-solid fa-user"></i>
-            <h5>Web Development</h5>
+            <h5>UX/UI design</h5>
             <div class="pra">
                 <p>
                     Every website should be built with two primary goals: firstly,
@@ -90,7 +90,7 @@
 
         <div class="card">
             <i class="fa-regular fa-bell"></i>
-            <h5>Web Development</h5>
+            <h5>Data management</h5>
             <div class="pra">
                 <p>
                     Every website should be built with two primary goals. firstly,
